Finish Implementing conversation management